--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,20 @@ main {
     box-shadow: 0 0 5px rgb(200, 200, 200);
     font-size: large;
 }
+#schedule {
+    position: absolute;
+    top: -75px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    font-size: larger;
+    border-radius: 50px;
+    background-color: #4285f4;
+    color: #fff;
+    border: none;
+    box-shadow: 0 0 5px rgb(200, 200, 200);
+    cursor: pointer;
+}
 #body {
     padding: 20px;
 }
@@ -82,6 +96,7 @@ main {
     text-decoration: none;
     box-shadow: 0 0 5px rgb(200, 200, 200);
     font-weight: bold;
+    transition: .25s;
 }
 #footer .mark {
     position: absolute;
@@ -91,6 +106,7 @@ main {
     background-color: #7a83ea;
     color: #fff;
     border-radius: 10px;
+    transition: .25s;
 }
 #footer .logo {
     position: absolute;
