--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ main {
 }
 #schedule {
     position: absolute;
-    top: -75px;
+    top: -55px;
     left: 50%;
     transform: translateX(-50%);
     padding: 10px;
@@ -41,6 +41,7 @@ main {
     border: none;
     box-shadow: 0 0 5px rgb(200, 200, 200);
     cursor: pointer;
+    font-weight: lighter;
 }
 #body {
     padding: 20px;
