--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,26 @@ main {
   width: 360px;
   text-align: center;
 }
+#status {
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: 2.5px 2.5px;
+    top: 5px;
+    left: 5px;
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px rgb(200, 200, 200);
+}
+#status.online {
+    background-image: url(../img/online.png);
+}
+#status.offline {
+    background-image: url(../img/offline.png);
+}
 #header {
     display: block;
     padding: 20px;
