--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -383,25 +383,72 @@ form .form-buttons button[type="reset"]:hover {
   transition: 0.25s;
   cursor: pointer;
 }
-#btn-edit {
+#btn-edit, .btn-info {
   background-color: rgba(0, 144, 231, 0.2) !important;
   color: #0090e7 !important;
-}#btn-edit:hover {
+}
+#btn-edit:hover, .btn-info:hover {
   background-color: #0090e7 !important;
   color: #fff !important;
 }
 #btn-delete {
   background-color: rgba(252, 66, 74, 0.2) !important;
   color: #fc424a !important;
-}#btn-delete:hover {
+}
+#btn-delete:hover {
   background-color: #fc424a !important;
   color: #fff !important;
 }
 /* SIN ICONOS */
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] { -moz-appearance:textfield; }
+/* Download */
+#download {
+  padding: 5px 10px;
+  width: 100%;
+  display: block;
+  transition: 0.25s;
+  cursor: pointer;
+  border-radius: 5px;
+  max-width: max-content;
+  margin: auto;
+  width: 100%;
+  border: 2px solid transparent;
+}
+
+/* Backup */
+input#backup {
+  display: none;
+}
+label[for="backup"] {
+  position: relative;
+  display: block;
+  border: dashed 2px rgba(255, 255, 255, 0.125);
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  font-size: medium;
+  transition: 0.25s;
+  margin-bottom: 5px;
+}
+label[for="backup"]:hover {
+  background-color: rgba(255, 255, 255, 0.0625);
+}
+#label-container{
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
