--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -405,3 +405,51 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 input[type=number] { -moz-appearance:textfield; }
+
+/*subjects*/
+
+.content {
+  width: 100%;
+  padding: 12px;
+}
+
+
+.content label{
+  display: block;
+}
+.content input{
+  margin-top: 8px;
+  display: block;
+}
+
+#table-list-subjects {
+  width: calc(100% - 10px);
+  margin: auto;
+  margin-top: 10px;
+  border-collapse: separate;
+  border-spacing: 2px;
+}
+#table-list-subjects th,
+#table-list-subjects td {
+  padding: 5px 7.5px;
+  color: #fff;
+  text-align: center;
+  font-size: smaller;
+}
+#table-list-subjects th {
+  font-weight: bolder;
+}
+#table-list-subjects td {
+  background-color: #2c2d2d;
+  border-radius: 5px;
+}
+#table-list-subjects .action-btn {
+  font-size: smaller;
+  color: #fff;
+  background-color: transparent;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  transition: 0.25s;
+  cursor: pointer;
+}
