--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -416,8 +416,37 @@ input[type="number"]::-webkit-outer-spin-button {
   border-radius: 5px;
   max-width: max-content;
   margin: auto;
+  margin-top: 15px;
   width: 100%;
   border: 2px solid transparent;
+}
+
+/* Form download */
+#form-download {
+  justify-content: center;
+}
+#form-download input[type="checkbox"] {
+  display: none;
+}
+
+#form-download input[type="checkbox"] + label {
+  display: block;
+  padding: 5px 10px;
+  margin: 2.5px;
+  background-color: #383939;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid #383939;
+  transition: 0.25s;
+  font-weight: bolder;
+}
+#form-download input[type="checkbox"]:checked + label {
+  background-color: #ffab00;
+  color: #fff;
+}
+#form-download input[type="checkbox"] + label:hover {
+  background-color: rgba(255, 171, 0, 0.2);
+  color: #ffab00;
 }
 
 /* Backup */
