--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,6 +441,14 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 5px 10px;
   background-color: #38393975;
 }
+.btn {
+  border-radius: 5px;
+  border: 1px solid transparent;
+  padding: 3px 6px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: 0.25s;
+}
 /* Download */
 #download {
   padding: 5px 10px;
