--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,9 +255,12 @@ form {
   justify-content: space-between;
 }
 form .input-group {
+  width: 100%;
+}
+form .input-group.half {
   width: calc(50% - 5px);
 }
-form .input-group .label-input {
+form .input-group label {
   display: block;
   font-size: small;
 }
@@ -272,6 +275,19 @@ form .input-group select {
   background-color: #383939;
   color: #fff;
   border: none;
+}
+form .input-group input[type="text"],
+form .input-group input[type="number"] {
+  width: 100%;
+  font-size: medium;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor:text;
+  background-color: #383939;
+  color: #fff;
+  border: 1px solid transparent;
 }
 form .input-group .input-time {
   display: inline-block;
